fix: modal contrast

--- a/styles/neovim.io/catppuccin.user.less
+++ b/styles/neovim.io/catppuccin.user.less
@@ -96,6 +96,8 @@
       color: @subtext0;
     }
 
+    --docsearch-container-background: fade(@base, 30%);
+    --docsearch-modal-background: @mantle;
     --docsearch-highlight-color: @accent;
     --docsearch-logo-color: @accent;
 
